# FaceDetection

./: .gitignore  CMakeLists.txt  README.md
UseFaceDetection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  facedet_camera  facedet_test  facedetection_camera.cpp  facedetection_test.cpp
UseFaceDetection/include/: classifier.h  common.h  detector.h  face_detection.h  feature_map.h  fust.h  model_reader.h
UseFaceDetection/include/classifier/: lab_boosted_classifier.h  mlp.h  surf_mlp.h
UseFaceDetection/include/feat/: lab_feature_map.h  surf_feature_map.h
UseFaceDetection/include/io/: lab_boost_model_reader.h  surf_mlp_model_reader.h
UseFaceDetection/include/util/: image_pyramid.h  math_func.h  nms.h
src/test/: facedetection_camera.cpp  facedetection_test.cpp
